# mutaria

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/: prototype_run.py  run_prototype.py
src/mutaria/: agent.py  genome.py  params.py  simulation.py  simulator.py  visualizer.py  world.py
src/scripts/: simulation.py
tests/: test_genome.py
