[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutaria"
version = "0.1.0"
description = "A Python-based evolution simulator"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.3.3"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2"
]
